--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 
 .container {
   max-width: 1200px;
-  margin: 40vh auto var(--space-md) auto;
+  margin: auto var(--space-md) auto var(--space-md) auto;
   padding: var(--space-lg) var(--space-md);
 }
 
