--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
 
 html, body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -41,12 +42,23 @@ body {
   color: var(--color-text);
   min-height: 100vh;
   line-height: 1.5;
+  position: relative;
+}
+
+.content-wrapper {
+  position: relative;
+  z-index: 1;
+  background: var(--color-bg);
+  /* min-height: 100vh; */
+  margin-bottom: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: var(--space-lg) var(--space-md);
 }
 
 .container {
+  margin: 40vh auto var(--space-md) auto;
   max-width: 1200px;
-  margin: auto var(--space-md) auto var(--space-md) auto;
-  padding: var(--space-lg) var(--space-md);
 }
 
 section {
@@ -57,7 +69,6 @@ h2 {
   font-size: var( --font-size-lg);
   font-weight: 500;
 }
-
 
 .hero-logo {
   align-self: start;
@@ -349,17 +360,27 @@ h2 {
   text-align: center;
   width: 100%;
   overflow: hidden;
+  z-index: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+.footer-content-wrapper {
+  margin: 0 auto;
+  pointer-events: auto;
+  padding: 0 var(--space-md);
 }
 
 .footer-content {
   display: flex;
+  max-width: 1200px;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  margin-bottom: var(--space-lg);
-  padding: 0 var(--space-md);
+  margin: 0 auto var(--space-lg) auto;
+  pointer-events: auto;
 }
 
 .footer-text {
@@ -380,6 +401,7 @@ h2 {
   height: 48px;
   cursor: pointer;
   transition: opacity 0.2s;
+  pointer-events: auto;
 }
 
 .footer-logo-img:hover {
@@ -397,7 +419,6 @@ h2 {
   line-height: 100%;
   letter-spacing: -0.03em;
   user-select: none;
-  /* text-box-trim: trim-both; */
 }
 
 .lets-talk-desc {
