--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
 }
 
 .container {
-  margin: 36vh auto var(--space-md) auto;
+  margin: var(--space-md) auto var(--space-md) auto;
   max-width: 1200px;
 }
 
