--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,43 @@ h2 {
   outline-offset: 2px;
 }
 
+/* Custom styling for work place links in hero section */
+.work-place .contact-link {
+  color: white;
+  text-decoration: none;
+  position: relative;
+  transition: opacity 0.2s;
+}
+
+.work-place .contact-link::after {
+  content: "";
+  display: inline-block;
+  width: 0.8em;
+  height: 0.8em;
+  margin-left: 0.1em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 640 640'%3E%3Cpath fill='white' d='M566.6 342.6C579.1 330.1 579.1 309.8 566.6 297.3L406.6 137.3C394.1 124.8 373.8 124.8 361.3 137.3C348.8 149.8 348.8 170.1 361.3 182.6L466.7 288L96 288C78.3 288 64 302.3 64 320C64 337.7 78.3 352 96 352L466.7 352L361.3 457.4C348.8 469.9 348.8 490.2 361.3 502.7C373.8 515.2 394.1 515.2 406.6 502.7L566.6 342.7z'/%3E%3C/svg%3E");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.3;
+  transition: opacity 0.2s;
+  vertical-align: middle;
+  transform: rotate(315deg);
+}
+
+.work-place .contact-link:hover {
+  opacity: 0.8;
+}
+
+.work-place .contact-link:hover::after {
+  opacity: 1;
+}
+
+.work-place .contact-link:focus {
+  outline: 2px solid white;
+  outline-offset: 2px;
+}
+
 #myBtn:focus {
   outline: 2px solid var(--color-text);
   outline-offset: 2px;
